--- a/src/sass/components/flash-card.scss
+++ b/src/sass/components/flash-card.scss
@@ -6,7 +6,7 @@
     border-radius: $border-radius;
     font-size: $h6-font-size;
     color: $blue;
-    font-family: $font-family-heading;
+    font-family: $font-family-display;
     font-weight: bold;
     text-decoration: none;
 
