--- a/src/sass/components/nav-over.scss
+++ b/src/sass/components/nav-over.scss
@@ -44,7 +44,7 @@
 .nav-over__nav-item {
     padding: pxtorem(18) pxtorem(24);
     border-bottom: 1px solid $darkblue-20;
-    font-family: $font-family-heading;
+    font-family: $font-family-display;
     font-size: $h6-font-size;
     color: $blue;
 
