--- a/src/sass/components/account-prompt.scss
+++ b/src/sass/components/account-prompt.scss
@@ -2,13 +2,17 @@
     overflow: hidden;
     background-color: $darkblue-5;
     border-radius: $border-radius;
-    .form-text {
+    .form-text,
+    .form-label {
         color: $white;
     }
 }
 
 .account-prompt__primary {
-    padding: 60px 70px 66px;
+    padding: 30px;
+    @include media-breakpoint-up(lg) {
+        padding: 60px 70px 66px;
+    }
 }
 
 .account-prompt__primary-title {
@@ -27,7 +31,7 @@
     gap: 18px;
     padding: 20px 20px 20px 0;
     border-top: 1px solid $darkblue-20;
-    font-family: $font-family-heading;
+    font-family: $font-family-display;
     font-size: $h6-font-size;
     color: $darkblue;
 }
@@ -43,16 +47,28 @@
 .account-prompt__actions {
     display: flex;
     gap: 12px;
-    margin-top: 56px;
+    margin-top: 24px;
+    @include media-breakpoint-up(lg) {
+        margin-top: 56px;
+    }
 }
 
 .account-prompt__secondary {
-    padding: 58px 70px 66px;
+    padding: 30px;
     background: $blue;
     color: $white;
+    @include media-breakpoint-up(lg) {
+        padding: 58px 58px 66px 70px;
+    }
+}
+
+.account-prompt__secondary-form {
+    @include media-breakpoint-up(lg) {
+        padding-right: 12px;
+    }
 }
 
 .account-prompt__secondary-title {
     color: $white;
-    margin-bottom: 24px;;
+    margin-bottom: 24px;
 }
