--- a/src/sass/overrides/variables.scss
+++ b/src/sass/overrides/variables.scss
@@ -103,7 +103,7 @@ $headings-font-family: $font-family-display;
 $headings-font-style: null;
 $headings-font-weight: 700;
 $headings-line-height: 1.1;
-$headings-color: $blue;
+$headings-color: $darkblue;
 
 // Border radius
 $border-radius: 16px;
