WHUB-278: Meta content component

--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -67,3 +67,4 @@
 @import "./components/social-share-pane";
 @import "./components/topic-navigation";
 @import "./components/account-prompt";
+@import "./components/content-meta";
