WHUB-279: Pull quote and image splash components

--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -68,3 +68,5 @@
 @import "./components/topic-navigation";
 @import "./components/account-prompt";
 @import "./components/content-meta";
+@import "./components/pull-quote";
+@import "./components/image-splash";
