WHUB-281: About author components

--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -70,3 +70,4 @@
 @import "./components/content-meta";
 @import "./components/pull-quote";
 @import "./components/image-splash";
+@import "./components/about-author";
