--- a/src/sass/components/kicker.scss
+++ b/src/sass/components/kicker.scss
@@ -6,10 +6,14 @@
     line-height: 1em;
     font-weight: 700;
     text-transform: uppercase;
-    color: $darkblue;
+    color: $blue;
 }
 
 .kicker--small {
     font-size: pxtorem(10);
     font-weight: 400;
+}
+
+.kicker--dark {
+    color: $darkblue;
 }
