WHUB-283: Collapsible panel component

--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -71,3 +71,4 @@
 @import "./components/pull-quote";
 @import "./components/image-splash";
 @import "./components/about-author";
+@import "./components/collapsible-panel";
