--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -11,6 +11,20 @@
 @import "../../node_modules/bootstrap/scss/variables";
 @import "../../node_modules/bootstrap/scss/mixins";
 @import "../../node_modules/bootstrap/scss/maps";
+@import "../../node_modules/bootstrap/scss/utilities";
+
+$utilities: map-merge(
+  $utilities,
+  (
+    "overflow": (
+    responsive: true,
+    property: overflow,
+    values: visible hidden scroll auto,
+  )
+  )
+);
+
+@import "../../node_modules/bootstrap/scss/utilities/api";
 
 // 4. Component variable overrides
 @import "./overrides/buttons";
@@ -21,7 +35,6 @@
 @import "../../node_modules/bootstrap/scss/root";
 @import "../../node_modules/bootstrap/scss/reboot";
 @import "../../node_modules/bootstrap/scss/helpers";
-@import "../../node_modules/bootstrap/scss/utilities";
 @import "../../node_modules/bootstrap/scss/type";
 @import "../../node_modules/bootstrap/scss/bootstrap-grid";
 @import "../../node_modules/bootstrap/scss/containers";
