--- a/src/sass/components/site-header.scss
+++ b/src/sass/components/site-header.scss
@@ -28,6 +28,7 @@ body {
     background: none;
     border: 0;
     line-height: 1;
+    border-radius: $border-radius;
 }
 
 .site-header__nav-item-icon {
