--- a/src/sass/components/mobile-navigation.scss
+++ b/src/sass/components/mobile-navigation.scss
@@ -54,6 +54,7 @@ html.mobile-navigation-open {
 .mobile-navigation__header-action {
     display: block;
     padding: 12px;
+    border: 0;
     text-decoration: none;
     font-size: $h6-font-size;
     line-height: 1;
